[package]
name = "hexlit"
version = "0.3.0"
authors = ["inspier <devdevin541@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/hexlit"
repository = "https://github.com/inspier/hexlit"
description = "A zero-allocation no_std-compatible zero-cost way to convert hex-strings to byte-arrays at compile time."
license = "MIT"
readme = "README.md"
